--- a/style.css
+++ b/style.css
@@ -9,12 +9,16 @@ body{
     font-style: normal;
     background-color: black;
     max-width: 1440px;
+    margin: 0 auto;
 }
 /* global css start --------------------------------------------------------*/
 :root{
     --text1:#FFFFFF;
     --text2:rgba(239, 237, 232, 0.65);
     --mainClr:#E6533C;
+}
+.twhite{
+    color: white;
 }
 
 .content{
@@ -28,9 +32,14 @@ body{
     color: white;
     line-height: 75px;
 }
-h2{
+.h2{
     font-size: 48px;
     font-weight: 700;
+    color: white;
+}
+h3{
+    font-size:28px;
+    font-size: 600;
     color: white;
 }
 .p1{
@@ -211,8 +220,7 @@ header#header {
     place-items: center;
     gap: 50px;
 }
-.singleHabitBox {
-}
+
 
 .singleHabitBox {
     display: flex;
@@ -259,6 +267,207 @@ header#header {
 .runImg img {
     width: 100%;
     border-radius: 30px;
+}
+
+/* training section-----------------*/
+.row {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    /* gap: 10px; */
+    /* height: 195px; */
+    height: 200px;
+}
+
+.row > div {
+    width: 100%;
+    height: 100%;
+}
+
+.row  img {
+    width: 100%;
+    height: 200px;
+    /* height: 100%; */
+}
+.col2 {
+    grid-column: span 2;
+}
+.col2 {
+    position: relative;
+}
+/* -----1---- */
+.col1 {
+    position: relative;
+}
+
+.col1 > div {
+    position: absolute;
+    content: "";
+    left: 0px;
+    top: 0;
+    background: rgba(6, 255, 210, 0.5);
+    height: 100%;
+    width: 100%;
+}
+.col1 > div h5 {
+    color: white;
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+    font-size: 18px;
+}
+/* -----2---- */
+
+.col2 > div {
+    position: absolute;
+    content: "";
+    left: 0px;
+    top: 0;
+    background: rgba(255, 0, 0, 0.3);
+    height: 100%;
+    width: 100%;
+    
+}
+.col2 > div h5 {
+    color: white;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    font-size: 18px;
+}
+/* -----3---- */
+.col3 {
+    position: relative;
+}
+
+.col3 > div {
+    position: absolute;
+    content: "";
+    left: 0px;
+    top: 0;
+    background: rgba(0, 0, 0, 0.5);
+    height: 100%;
+    width: 100%;
+}
+.col3 > div h5 {
+    color: white;
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+    font-size: 18px;
+}
+
+.row2 {
+    display: grid;
+    grid-template-columns: repeat(9,1fr);
+    height: 200px;
+}
+
+.row2 > div {
+    width: 100%;
+    height: 200px;
+}
+
+.row2 img {
+    width: 100%;
+    height: 200px;
+}
+
+.row2 .col1 {
+    grid-column: span 4;
+}
+.row2 .col1 img{
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.row2 .col2 {
+    grid-column: span 2;
+}
+.row2 .col2 img{
+    background-color: rgba(66, 255, 0, 0.3);
+}
+
+.row2 .col3 {
+    grid-column: span 3;
+}
+.row2 .col3 img{
+    background-color: rgba(0, 71, 255, 0.3);
+}
+.trainTitle {
+    text-align: left;
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 80px;
+}
+/* calculate section start */
+#calculate{
+    background-color: rgba(34, 34, 34, 1);
+}
+.calcWrap {
+    display: flex;
+}
+
+.LboxClac {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+}
+table.table {
+    width: 70%;
+    /* margin: auto; */
+}
+table td,th {
+    padding: 12px;
+    text-align: left;
+    color: white;
+}
+.rBoxClack {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 23px;
+}
+
+.rBoxClack p {
+    padding: 15px 0px;
+}
+form.calcForm {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 8px;
+}
+
+
+form.calcForm >div input {
+    padding-right: none;
+    width: 50%;
+    flex: 1;
+    color: white;
+    /* padding: 13px 0px 13px 0px; */
+    font-size: 15px;
+    font-weight: 500;
+    padding: 13px;
+    border: none;
+    background: #ffffff1f;
+    border-radius: 8px;
+
+}
+form.calcForm >div select {
+    width: 50%;
+    padding: 13px;
+    font-size: 15px;
+    font-weight: 500;
+    flex: 1;
+    border: none;
+    background: #ffffff1f;
+    color: #ffffff40;
+    border-radius: 8px;
+}
+form.calcForm >div {
+    display: flex;
+    gap: 10px;
 }
 /* responsive media section ----------------------------------*/
 
@@ -316,6 +525,63 @@ header#header {
     .habitWrap {
         grid-template-columns: repeat(1,1fr);
      
+    }
+    /* run seciton start */
+    .runWrap {
+        flex-direction: column;
+        gap: 48px;
+    }
+    .runCont {
+        width: 100%;}
+        .runImg {
+            width: 100%;
+        }
+    /* trainsing section start */
+    .row{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .row > div{
+        height: 100%;
+    }
+    .row2 > div{
+        height: 100%;
+    }
+    .col1{
+        grid-column: auto;
+    }
+    .col2{
+        grid-column: auto;
+    }
+    .col3{
+        grid-column: auto;
+    }
+    .row{
+        height: auto;
+    }
+    .row2{
+        grid-template-columns: repeat(1,1fr);
+        height: auto;
+    }
+    .trainTitle {
+  
+        width: 100%;
+  
+    }
+    /* calculator section  */
+    .calcWrap {
+        flex-direction: column;
+        gap: 80px;
+    }
+    .LboxClac {
+        width: 100%;
+    }
+    table.table {
+        width: 100%;
+        /* margin: auto; */
+    }
+    .rBoxClack {
+        width: 100%;
+
     }
 
 }
