--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
     color: white;
     line-height: 75px;
 }
-.h2{
+h2{
     font-size: 48px;
     font-weight: 700;
     color: white;
@@ -63,18 +63,18 @@ button:hover{cursor: pointer;}
     background-color: #E6533C;
     color: white;
     border: 1px solid #E6533C;
-    padding: 10px 15px;
+    padding: 13px 22px;
     font-size: 16px;
-    font-weight: 700;
+    font-weight: 500;
     border-radius: 42px;
 }
 .btnTrans{
     background-color: transparent;
     color: white;
     border: 1px solid  white;
-    padding: 10px 15px;
+    padding: 13px 22px;
     font-size: 16px;
-    font-weight: 700;
+    font-weight: 500;
     border-radius: 42px;
 }
 .title{
@@ -82,6 +82,7 @@ button:hover{cursor: pointer;}
     display: flex;
     flex-direction: column;
     gap: 15px;
+    color: white;
 }
 .py{
     padding:80px 0px;
@@ -469,6 +470,87 @@ form.calcForm >div {
     display: flex;
     gap: 10px;
 }
+
+.teamWrap {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+}
+
+.teamWrap>div img {
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    object-fit: cover;
+}
+
+.teamWrap div {width: 100%;}
+
+.teamWrap > div {
+    position: relative;
+}
+
+.teamInfo {
+    position: absolute;
+    left: 28px;
+    bottom: 26px;
+    color: white;
+}
+
+.teamInfo h6 {
+    font-size: 22px;
+}
+.opacity {
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 0;
+    background: #0000003d;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+}
+
+/* footer section */
+footer{
+    background-color: rgba(255, 255, 255, 0.1);
+}
+.footerWtrap {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-items: flex-end;
+}
+.footerDesc {
+    grid-column: span 2;
+    justify-self: flex-start;
+}
+.footerWtrap > div {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.footerWtrap > div li {
+    list-style: none;
+    line-height: 30px;
+}
+
+.footerWtrap > div li a {
+    text-decoration: none;
+    color: #ffffffa1;
+}
+.bb {
+    border-bottom: 1px solid #ffffff73;
+}
+footer > p {
+    color: #ababab;
+    text-align: center;
+    padding: 40px 0px;
+    font-size: 22px;
+}
+.fLogo {
+    font-size: 48px;
+}
 /* responsive media section ----------------------------------*/
 
 /* mobile version start */
@@ -583,5 +665,21 @@ form.calcForm >div {
         width: 100%;
 
     }
-
+    .teamWrap {
+        grid-template-columns: repeat(1,1fr);   
+        justify-items:flex-start
+    }
+    /* footer */
+    .footerWtrap {
+        
+grid-template-columns: repeat(1,1fr);
+        
+justify-items: flex-start;
+        
+gap: 25px;
+    }
+    .footerDesc {
+        grid-column: span 1;
+        justify-self: flex-start;
+    }
 }
